[package]
name = "pyift"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
numpy = "0.19.0"
ndarray = "0.15.6"
num-traits = "0.2.16"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
