[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "pyift"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyift._rust_ift"
python-source = "python"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"python/pyift/__init__.py" = ["F401"]
